# rusty-slack

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  basic.yml  release.yml
src/: error.rs  slack.rs
