[package]
authors = ["Christopher Brickley <brickley@gmail.com>", "Nyah Check <hello@nyah.dev>"]
description = "A rust crate for sending messages to Slack via webhooks."
homepage = "https://github.com/ch3ck/rusty-slack"
keywords = ["slack", "webhook", "hook", "messaging"]
license = "MIT/Apache-2.0"
name = "slack-hooked"
readme = "README.md"
repository = "https://github.com/ch3ck/rusty-slack"
version = "0.9.0"
edition = "2021"


[dependencies]
chrono = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
hex = "0.4"
error-chain = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
